Created the plugin

--- a/inkUE4Integration.uplugin
+++ b/inkUE4Integration.uplugin
@@ -2,20 +2,20 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "Ink",
+	"FriendlyName": "inkUE4Integration",
 	"Description": "Port from the Unity ink integration (https://github.com/inkle/ink-unity-integration) for Unreal Engine 4.",
-	"Category": "fivefingergames",
+	"Category": "Scripting",
 	"CreatedBy": "fivefingergames",
 	"CreatedByURL": "https://fivefingergames.com",
-	"DocsURL": "https://fivefingergames.com/ink_ue4_integration",
+	"DocsURL": "https://github.com/mrbandler/ink-ue4-integration/wiki",
 	"MarketplaceURL": "",
 	"SupportURL": "support@fivefingergames.com",
-	"CanContainContent": false,
+	"CanContainContent": true,
 	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "ink_UE4_integration",
+			"Name": "inkUE4Integration",
 			"Type": "Developer",
 			"LoadingPhase": "Default"
 		}
