--- a/inkUE4Integration.uplugin
+++ b/inkUE4Integration.uplugin
@@ -1,36 +1,37 @@
 {
-  "FileVersion": 3,
-  "Version": 1,
-  "VersionName": "1.0.0",
-  "FriendlyName": "Ink",
-  "Description": "Port from the Unity ink integration (https://github.com/inkle/ink-unity-integration) for Unreal Engine 4.",
-  "Category": "Scripting",
-  "CreatedBy": "fivefingergames",
-  "CreatedByURL": "https://fivefingergames.com",
-  "DocsURL": "https://github.com/mrbandler/InkUE4Integration/wiki",
-  "MarketplaceURL": "",
-  "SupportURL": "support@fivefingergames.com",
-  "CanContainContent": true,
-  "IsBetaVersion": true,
-  "Installed": false,
-  "Modules": [
-    {
-      "Name": "Ink",
-      "Type": "Runtime",
-      "LoadingPhase": "Default",
-      "WhitelistPlatforms": [
-        "Win64",
-        "Win32"
-      ]
-    },
-    {
-      "Name": "InkEditor",
-      "Type": "Editor",
-      "LoadingPhase": "Default",
-      "WhitelistPlatforms": [
-        "Win64",
-        "Win32"
-      ]
-    }
-  ]
+	"FileVersion": 3,
+	"Version": 1,
+	"VersionName": "0.1.0",
+	"FriendlyName": "ink UE4 Integration",
+	"Description": "Port from the Unity ink integration (https://github.com/inkle/ink-unity-integration) for Unreal Engine 4.",
+	"Category": "fivefingergames",
+	"CreatedBy": "fivefingergames",
+	"CreatedByURL": "https://fivefingergames.com",
+	"DocsURL": "https://github.com/mrbandler/InkUE4Integration/wiki",
+	"MarketplaceURL": "",
+	"SupportURL": "support@fivefingergames.com",
+	"EngineVersion": "4.20.0",
+	"CanContainContent": true,
+	"IsBetaVersion": true,
+	"Installed": false,
+	"Modules": [
+		{
+			"Name": "Ink",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [
+				"Win64",
+				"Win32"
+			]
+		},
+		{
+			"Name": "InkEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [
+				"Win64",
+				"Win32"
+			]
+		}
+	]
 }
